--- a/.env
+++ b/.env
@@ -43,10 +43,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=1440454
-PUSHER_APP_KEY=89eec464cd4d14a2238d
-PUSHER_APP_SECRET=3cf76ea88c78998054f8
-PUSHER_APP_CLUSTER=ap1
+# PUSHER_APP_ID=1440454
+# PUSHER_APP_KEY=89eec464cd4d14a2238d
+# PUSHER_APP_SECRET=3cf76ea88c78998054f8
+# PUSHER_APP_CLUSTER=ap1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
